--- a/styles.css
+++ b/styles.css
@@ -431,7 +431,7 @@ main {
 
 .schedule-item .time {
     font-weight: bold;
-    color: #3498db;
+    color: #D4AF37;
     margin-right: 1rem;
     min-width: 150px;
 }
